Fix horizontal scroll for smaller screen size

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 .main-page {
-  width: 330px;
+  padding: 0 24px;
   margin: 0 auto;
 }
 
